# proyecto-final-2025-2-novo

./: CMakeLists.txt  DOCUMENTACION.md  INSTRUCCIONES_COMPILACION.md  README.md  run_tests.bat  run_tests.sh
docs/: documentation.tex
src/: Matrix.h  Network.cpp  Network.h  main.cpp  main_large.cpp
src/layers/: Activation.h  Dense.cpp  Dense.h  Layer.h
src/losses/: MSE.h
tests/: test_activation.cpp  test_dense.cpp  test_matrix.cpp  test_xor.cpp
